fix: align notification count waybar padding

--- a/files/home/.config/waybar/style.css
+++ b/files/home/.config/waybar/style.css
@@ -244,7 +244,7 @@ window#waybar {
   color: @ws5;
   margin: 0 0 0 10px;
   min-width: 10px;
-  padding: 0;
+  padding: 0 0 0 5px;
   font-family: "IBM Plex Sans";
   font-size: 11px;
   font-weight: 600;
